<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <!-- Strings - lang:EN -->
    <string name="app_name">Are You Shouting?</string>
    
    <string name="title">Are You\nShouting?</string>
    <string name="settings">Settings</string>
    <string name="checkNow">Check Now</string>
    
    <string name="background_color">Background Color:</string>
    <string name="text_icons_color">Text / Icons Color:</string>
    <string name="loud_voice_level">Loud voice level</string>
    <string name="decibel_sensibility">Decibel sensibility</string>
    <string name="delete_temp_files">Don\'t store temporary recording files</string>
    
    <string name="external_storage_error">Error: External storage not mounted!</string>
    <string name="recorded_to">Audio recorded to:\n</string>
    <string name="volume_message">You are Shouting!\nCan you turn down the volume, please?</string>
    <string name="error_incompatible_colors">Background Color and Text/Icons Color must be different!</string>
    
    <string name="notification_title">Are You Shouting?</string>
    <string name="notification_text">The app is looking for loud sounds&#8230;</string>
    
    <string name="content_description">Here goes the Content Description</string>
    
    <string name="default_decibel_text">00 / 00 dB</string>
    
    <string name="number_picker_positive_button">OK</string>
    <string name="number_picker_negative_button">Cancel</string>
    
</resources>