<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parent">
    
    <TextView 
        android:id="@+id/title"
        android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/big_margin"
		android:gravity="center"
		android:textSize="@dimen/large_font_size"
		android:text="@string/title"/>
    
   <TextView 
        android:id="@+id/settings"
        android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_marginBottom="@dimen/medium_margin"
		android:layout_centerHorizontal="true"
		android:textSize="@dimen/normal_font_size"
		android:text="@string/settings"
		android:visibility="invisible"/>
   
   <TextView 
        android:id="@+id/checkNow"
        android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_above="@id/settings"
		android:layout_marginBottom="@dimen/medium_margin"
		android:layout_centerHorizontal="true"
		android:textSize="@dimen/normal_font_size"
		android:text="@string/checkNow"
		android:visibility="invisible"/>

</RelativeLayout>